Fix horizontal scroll and close icon position

--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ body {
 }
 
 .close-icon {
-  padding: 0 55%;
+  padding: 5% 0 0 86%;
   width: 15px;
 }
 
@@ -1108,21 +1108,13 @@ button:active {
 }
 
 .skills {
-  /* Skills */
-
   height: 24px;
   left: 12px;
   right: 78px;
-
-  /* Body / 1 - Bolder */
-
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-
-  /* identical to box height, or 120% */
-
   display: flex;
   align-items: center;
   padding: 12px;
@@ -1130,8 +1122,6 @@ button:active {
 }
 
 hr.solid {
-  /* Solid border */
-
   border-top: 1px solid #dfe1e6;
   width: 357px;
 }
@@ -1142,56 +1132,32 @@ hr.solid {
 }
 
 .blue-rounded {
-  /* Contact me */
-
   position: absolute;
   width: 100%;
-
-  /* height: 1000px; */
   left: 0;
-
-  /* top: 4600px; */
   margin: 0;
-
-  /* Primary/B400 */
-
   background: #6070ff;
   border-radius: 50px 0 0;
   background-image: url(assets/desktop-contact-bg.svg);
 }
 
 .blue-rounded > h3 {
-  /* Header / 2 */
-
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   margin-top: 103px;
-
-  /* or 130% */
-
   text-align: center;
-
-  /* Neutrals/N0 */
   color: #fff;
 }
 
 .blue-rounded > p {
-  /* Primary Text */
-  width: 569px;
-
-  /* height: 102px; */
   font-family: "Poppins", sans-serif;
-
-  /* margin: 0 20px; */
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
   text-align: center;
-
-  /* Primary/B50 */
   color: #ebebff;
   margin-bottom: 24px;
 }
@@ -1202,12 +1168,6 @@ form {
   justify-content: center;
   flex-direction: column;
 }
-
-/* label {
-  font-size: 17px;
-  padding-top: 10px;
-  color: black;
-} */
 
 #name {
   /* height: 48px; */
@@ -1571,6 +1531,9 @@ form {
   }
 
   .blue-rounded {
+    /* Contact me */
+    /* height: auto; */
+
     /* Primary/B400 */
 
     background: #6070ff;
